--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
+/* .App {
   text-align: center;
+  margin: 0px;
 }
 
 .App-logo {
@@ -35,4 +36,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
